--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".facedetection.FaceDetectionActivity">
-            
-        </activity>
+        <activity android:name=".facedetection.FaceDetectionActivity"></activity>
+        <activity android:name=".qrreader.QRReaderActivity"></activity>
     </application>
 
 </manifest>
