Design continued and combined

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
     //Face Detection
     implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
+
+    //Camera View
     compile 'com.otaliastudios:cameraview:1.5.1'
 
     testImplementation 'junit:junit:4.12'
