--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     //Camera View
     compile 'com.otaliastudios:cameraview:1.5.1'
 
+    //Circle Image
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
