--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <meta-data
         android:name="com.google.firebase.ml.vision.DEPENDENCIES"
-        android:value="ocr" />
+        android:value="ocr,face,barcode" />
 
     <application
         android:allowBackup="true"
