--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,10 @@
             android:name=".identitysigniture.IdentitySignitureActivity"
             android:configChanges="orientation"
             android:screenOrientation="landscape" />
-        <activity android:name=".identityresult.IdentityResultActivity"></activity>
+        <activity
+            android:name=".identityresult.IdentityResultActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
