--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".welcome.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".facedetection.FaceDetectionActivity" />
-        <activity android:name=".qrreader.QRReaderActivity" />
         <activity
-            android:name=".identityviacamera.IdentityCameraActivity"
+            android:name=".identitycamera.view.IdentityCameraActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
