--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //Tensorflow
+    implementation 'org.tensorflow:tensorflow-android:1.5.0'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
