--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
             universalApk true
         }
     }
+
+    aaptOptions { noCompress 'pb' }
 }
 
 dependencies {
@@ -57,7 +59,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //Tensorflow
-    implementation 'org.tensorflow:tensorflow-android:1.5.0'
+    implementation 'org.tensorflow:tensorflow-android:1.9.0'
 
 
 }
